* replaced URL with URI to prevent failures for torrents with "udp://" announce urls